feat: opt-in network access with an approval gate, update checker, version 4.0.1
Three things, all resting on the same principle: Arima runs code as the user who
started it, so anything that widens who can ask must narrow what happens next.

NETWORK ACCESS, off by default. Settings gains a toggle that binds to every
interface instead of loopback. The bind is decided in BaristaApplication before
Spring starts, reading settings.json directly - a listening socket cannot be
re-bound underneath a running server, so it takes effect on the next start and
says so. An unreadable settings file falls back to loopback: it must never fail
open.

THE APPROVAL GATE is what makes that safe to offer. Work arriving from another
machine does not run on arrival. The request blocks in LocalAccessFilter,
ApprovalService holds the code, the browser is raised with it on screen, and it
runs only when the person at the machine says so. Because the HTTP request
blocks rather than returning, a remote caller cannot report success for code
that never ran. Unanswered requests expire refused - silence is never consent.
/api/approvals/* refuses any non-loopback caller, so an agent cannot approve its
own code, and the approval endpoints are excluded from gating or the flow would
deadlock.

Two things this surfaced while testing it end to end. The servlet body can only
be read once, and it has to be read to show the user what they are approving, so
it is cached and replayed to the controller. And the Host-header rebinding check
had to be scoped to loopback-only mode: with network access on, a legitimate
request genuinely carries the LAN address, and rebinding buys an attacker
nothing they cannot already do directly.

THE UPDATE CHECKER answers "is there a newer version" as "does origin/master
have commits I do not" - git-based rather than a release feed, because that is
how Arima is installed, and it adds no new outbound host. Checking is read-only.
Applying pulls, rebuilds with the wrapper and resta